modules/gdscript/tests/scripts/parser/errors/constant_conflicts_variable.gd
func test():
	var TEST = 50
	final TEST = 25
